ui styles updated

--- a/app/less/streamline.less
+++ b/app/less/streamline.less
@@ -27,10 +27,8 @@
 
 .streamline .sl-item:after, .streamline:after {
   background-color: #fff;
-  border-color: inherit;
   border-radius: 10px;
-  border-style: solid;
-  border-width: 1px;
+  border: 1px solid inherit;
   bottom: 0;
   content: "";
   height: 9px;
