--- a/app/less/time-selector.less
+++ b/app/less/time-selector.less
@@ -1,9 +1,5 @@
 .timeSelectorDirective {
   background: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
   user-select: none;
 }
 
@@ -11,15 +7,10 @@
   text-align: center;
   vertical-align: middle;
   color: rgb(112, 112, 112);
-  text-shadow: 0px 1px #FFF;
+  text-shadow: 0 1px #FFF;
   cursor: pointer;
-  -webkit-transition: 500ms ease-out all;
-  -moz-transition: 500ms ease-out all;
-  -ms-transition: 500ms ease-out all;
-  -o-transition: 500ms ease-out all;
   transition: 500ms ease-out all;
   font-size: 100%;
-  border: 1px solid #CCC;
   padding: 3px;
   margin: 3px;
   border: 1px solid #EDE;
@@ -44,7 +35,7 @@
   background-color: rgb(247, 247, 247);
   color: #555555;
   padding: 5px;
-  margin: 0px 3px;
+  margin: 0 3px;
   min-width: 30px;
   text-align: center;
   border: 1px solid #DDD;
