--- a/app/less/animations.less
+++ b/app/less/animations.less
@@ -1,12 +1,9 @@
 .view-content {
-  -webkit-transition: ease-in-out 0.2s;
-  -moz-transition: ease-in-out 0.2s;
-  -o-transition: ease-in-out 0.2s;
   transition: ease-in-out 0.2s;
 }
 .view-content.ng-enter, .view-content.ng-leave-active, .ng-hide { //use .ng-leave-active
   opacity: 0;
-  height: 0px;
+  height: 0;
 }
 .ng-enter-active, .ng-leave{ //use .ng-leave
   opacity: 1;
@@ -35,29 +32,19 @@
     text-decoration: none;
     color: #888;
     background-color: #fff;
-    -webkit-transition: 500ms ease-out all;
-    -moz-transition: 500ms ease-out all;
-    -ms-transition: 500ms ease-out all;
-    -o-transition: 500ms ease-out all;
     transition: 500ms ease-out all;
   }
 }
 
 .well-highlight {
-  -webkit-box-shadow: inset 0 1px 1px rgba(3, 3, 3, 0.05);
   box-shadow: inset 0 1px 1px rgba(3, 3, 3, 0.05);
   border: 1px solid #e3e3e3;
   padding: 2px;
   margin: 4px;
   border-radius: 3px;
   &:hover {
-    -webkit-transition: 500ms ease-out all;
-    -moz-transition: 500ms ease-out all;
-    -ms-transition: 500ms ease-out all;
-    -o-transition: 500ms ease-out all;
     transition: 500ms ease-out all;
     border: 1px solid #fff;
-    -webkit-box-shadow: inset 0 1px 1px rgba(8, 8, 8, 0.05);
     box-shadow: inset 0 1px 1px rgba(8, 8, 8, 0.05);
   }
   a {
