--- a/app/less/app.less
+++ b/app/less/app.less
@@ -13,6 +13,7 @@
 @import "time-selector.less";
 @import "streamline.less";
 @import "variables.less";
+@import "logo.less";
 
 @sidebar-width: 200px;
 @sidebar-color: #555;
@@ -27,7 +28,7 @@ body {
 
     .navbar-wrapper {
       .sidebar-header {
-        width: 0px;
+        width: 0;
       }
       .navbar-header-wrapper {
         margin-left: 0;
@@ -35,7 +36,7 @@ body {
     }
     .content-wrapper {
       .sidebar-wrapper {
-        width: 0px;
+        width: 0;
       }
       .page-content-wrapper {
         margin-left: 0;
@@ -46,9 +47,6 @@ body {
   .navbar-wrapper {
     z-index: 3000;
     padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
     position: fixed;
 
@@ -58,9 +56,6 @@ body {
       height: 50px;
       background: @sidebar-color;
       overflow-y: auto;
-      -webkit-transition: all 0.5s ease;
-      -moz-transition: all 0.5s ease;
-      -o-transition: all 0.5s ease;
       transition: all 0.5s ease;
 
       .sidebar-brand {
@@ -70,6 +65,7 @@ body {
         padding-left: 15px;
         position: fixed;
         a {
+          text-decoration: none;
           color: #999999;
           &:hover {
             color: #fff;
@@ -80,12 +76,7 @@ body {
     }
 
     .navbar-header-wrapper {
-      -webkit-transition: all 0.5s ease;
-      -moz-transition: all 0.5s ease;
-      -o-transition: all 0.5s ease;
       transition: all 0.5s ease;
-      -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
-      -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
       box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
       background-color: #fafafa;
       width: 100%;
@@ -96,9 +87,6 @@ body {
   }
 
   .content-wrapper {
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
     padding-top: 50px;
 
@@ -123,9 +111,6 @@ body {
       height: 100%;
       background: @sidebar-color;
       overflow-y: auto;
-      -webkit-transition: all 0.5s ease;
-      -moz-transition: all 0.5s ease;
-      -o-transition: all 0.5s ease;
       transition: all 0.5s ease;
 
       .sidebar-nav {
@@ -152,14 +137,16 @@ body {
               text-decoration: none;
             }
           }
+          &.active {
+            a {
+              color: #fff;
+            }
+          }
         }
       }
     }
 
     .page-content-wrapper {
-      -webkit-transition: all 0.5s ease;
-      -moz-transition: all 0.5s ease;
-      -o-transition: all 0.5s ease;
       transition: all 0.5s ease;
       padding: 15px;
       margin-left: @sidebar-width;
@@ -171,9 +158,6 @@ body {
   position: fixed;
   right: -1px;
   top: 80px;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
   width: 440px;
   z-index: 1050;
@@ -215,8 +199,6 @@ textarea {
   color: #555555;
   text-decoration: none;
   background-color: #e5e5e5;
-  -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
-  -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
   box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
 }
 
@@ -311,7 +293,6 @@ legend + .control-group {
   margin-bottom: 0;
 }
 
-
 .form-control {
   .list-inline {
     .tag-item {
@@ -356,4 +337,3 @@ legend + .control-group {
 .loading-box {
   padding-left: 50%;
 }
-
