--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,12 +1,20 @@
 <div class="navbar-wrapper">
   <div class="sidebar-header">
     <div class="sidebar-brand">
-      <a title="Fraud 2.0" ui-sref="velocity.config.list">
-        <i class="fa fa-home"></i>
+      <a title="Fraud 2.0" ui-sref="velocity.config.list" class="logo">
+        <div>
+          <i class="fa fa-home"></i>
         Velocity
+        </div>
+        <div class="spin-logo">
+          <ul>
+            <li ng-repeat="i in [1,2,3,4,5,6,7,8]"></li>
+          </ul>
+        </div>
       </a>
     </div>
   </div>
+
   <div class="navbar-header-wrapper">
     <a ng-click="app.settings.asideFolded = !app.settings.asideFolded" class="btn no-shadow navbar-btn"
        id="menu-toggle">
